brain/sources/prod-metadata/objects/Application__c/Application__c.object-meta.xml
<CustomObject>
    <label>Application</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Application</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>