brain/sources/prod-metadata/objects/Application__c/fields/Date_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Application__c</fullName>
    <label>Date of Application</label>
    <type>Date</type>
</CustomField>