brain/sources/prod-metadata/objects/Application__c/fields/Day_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Application__c</fullName>
    <formula>CASE( MOD(  Date_of_Application__c - DATE( 1900, 1, 7 ), 7 ), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, &quot;Saturday&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Application</label>
    <type>Text</type>
</CustomField>