brain/sources/prod-metadata/objects/Application__c/fields/Long_Applications__c.field-meta.xml
<CustomField>
    <fullName>Long_Applications__c</fullName>
    <label>Long Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>