brain/sources/prod-metadata/objects/Application__c/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing</label>
    <referenceTo>Marketing__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>