brain/sources/prod-metadata/objects/Application__c/fields/Reason_why_target_not_completed__c.field-meta.xml
<CustomField>
    <fullName>Reason_why_target_not_completed__c</fullName>
    <label>Reason why target not completed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>