brain/sources/prod-metadata/objects/Application__c/fields/Recruiter_s_Lead__c.field-meta.xml
<CustomField>
    <fullName>Recruiter_s_Lead__c</fullName>
    <formula>Recruiter__r.Owner:User.FirstName  + &apos; &apos; + Recruiter__r.Owner:User.LastName</formula>
    <label>Recruiter&apos;s Lead</label>
    <type>Text</type>
</CustomField>