brain/sources/prod-metadata/objects/Application__c/fields/Short_Applications__c.field-meta.xml
<CustomField>
    <fullName>Short_Applications__c</fullName>
    <label>Short Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>