brain/sources/prod-metadata/objects/Application__c/fields/Total_Applications__c.field-meta.xml
<CustomField>
    <fullName>Total_Applications__c</fullName>
    <formula>Long_Applications__c + Short_Applications__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Applications</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>